# Lupa-na-prompt

./: .gitignore  CHEATSHEET.md  DEPLOYMENT.md  FINAL_SUMMARY.md  INSTRUKCJA_PROJEKTУ.md  MANIFEST.md  PREZENTACJA.md  PROJECT_COMPLETE.md  README.md  TODO.md  analysis_patterns.ipynb  analysis_patterns_groq.ipynb  analysis_patterns_llama.ipynb  gemini.ipynb  gemma_generation.ipynb  gemma_processing.py  llama_generation.ipynb  llama_processing.py  main.py  prompts.csv  prompts.txt  prompts2.csv  pyproject.toml  requirements.txt  strona.py  strona_gemma.py  strona_llama.py  test.ipynb  test2.ipynb  test_groq.ipynb  test_groq2.ipynb  tokens.env.example
context/: MN.md  prob.md
results_llama/: hallucination_cases.csv  ranking_strategies.csv  report.json  risk_indicators.csv  variability_analysis.csv
saved_responses/: controversial.csv  metrics.csv  parsed_responses.csv  parsed_responses_2025-12-30_17-17-38.csv  parsed_responses_2025-12-30_19-49-20.csv  raw_responses_2025-12-30_17-17-38.csv  raw_responses_2025-12-30_19-49-20.csv
saved_responses_groq/: hallucination_cases_2025-12-31_00-39-31.csv  ranking_strategies_2025-12-31_00-25-40.csv  report_2025-12-31_00-47-50.json  risk_indicators_2025-12-31_00-25-40.csv  transition_matrix_2025-12-31_00-25-40.csv
saved_responses_llama/: controversial.csv  metrics.csv  parsed_responses.csv  parsed_responses_2025-12-31_00-25-21.csv  prompts_made.csv  raw_responses_2025-12-31_00-25-21.csv  raw_responses_progress.csv  report_2025-12-31_00-25-40.json  report_2025-12-31_00-36-56.json
src/lupa/: Model.py  test.py
