[project]
name = "lupa-na-prompt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "evaluate>=0.4.6",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "optuna>=4.6.0",
    "optunahub>=0.4.0",
    "pandas>=2.3.3",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
