[project]
name = "lupa-na-prompt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "evaluate>=0.4.6",
    "google-generativeai>=0.8.6",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "openai>=2.14.0",
    "optuna>=4.6.0",
    "optunahub>=0.4.0",
    "pandas>=2.3.3",
    "pymupdf-layout>=1.26.6",
    "pymupdf4llm>=0.2.7",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "vertexai>=1.71.1",
]
